# watcher

./: .gitignore  CMakeLists.txt  README.md  vix.json  watcher.vix
examples/: basic_watch.cpp  extensions_filter.cpp  hot_reload.cpp  non_recursive.cpp
include/watcher/: watcher.hpp
tests/: test_basic.cpp
